[gd_scene load_steps=56 format=2]

[ext_resource path="res://Characters/Enemies/Minotaur/MinotaurStateMachine.gd" type="Script" id=1]
[ext_resource path="res://Characters/Enemies/Minotaur/Minotaur.png" type="Texture" id=2]
[ext_resource path="res://Characters/Enemies/Minotaur/States/Idle.gd" type="Script" id=3]
[ext_resource path="res://Characters/Enemies/Minotaur/Minotaur.gd" type="Script" id=4]
[ext_resource path="res://Stats/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Characters/Enemies/Minotaur/States/Wander.gd" type="Script" id=6]
[ext_resource path="res://Overlap/PlayerDetectionZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://Characters/Enemies/Minotaur/States/Chase.gd" type="Script" id=8]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=9]
[ext_resource path="res://Characters/Enemies/Minotaur/States/Stamp.gd" type="Script" id=10]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=11]
[ext_resource path="res://Characters/Enemies/Minotaur/States/Attack.gd" type="Script" id=12]
[ext_resource path="res://Characters/Enemies/Minotaur/States/Die.gd" type="Script" id=13]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.2415
height = 14.3074

[sub_resource type="Animation" id=2]
resource_name = "attack1"
length = 1.575
step = 0.175
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.175, 0.35, 0.525, 0.7, 0.875, 1.05, 1.225, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack2"
length = 0.875
step = 0.175
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.175, 0.35, 0.525, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40 ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack3"
length = 1.575
step = 0.175
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.175, 0.35, 0.525, 0.7, 0.875, 1.05, 1.225, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 54, 55, 56, 57, 58, 59, 60, 61, 62 ]
}

[sub_resource type="Animation" id=5]
length = 0.875
loop = true
step = 0.175
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.175, 0.35, 0.525, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22 ]
}

[sub_resource type="Animation" id=6]
resource_name = "die"
length = 1.05
step = 0.175
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.175, 0.35, 0.525, 0.7, 0.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 81, 82, 83, 84, 85, 86 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "die" ],
"method": "_on_animation_finished"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "hurt"
length = 0.525
loop = true
step = 0.175
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.175, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 63, 64, 65 ]
}

[sub_resource type="Animation" id=8]
resource_name = "hurt2"
length = 0.525
loop = true
step = 0.175
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.175, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74 ]
}

[sub_resource type="Animation" id=9]
length = 0.875
loop = true
step = 0.175
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.175, 0.35, 0.525, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=10]
length = 1.05
loop = true
step = 0.175
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.175, 0.35, 0.525, 0.7, 0.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49, 50 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "stamp" ],
"method": "_on_animation_finished"
} ]
}

[sub_resource type="Animation" id=11]
length = 1.4
loop = true
step = 0.175
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.175, 0.35, 0.525, 0.7, 0.875, 1.05, 1.225 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16 ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "attack1"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "attack2"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "attack3"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "charge"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "hurt2"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "stamp"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachine" id=39]
states/attack1/node = SubResource( 12 )
states/attack1/position = Vector2( 361, 145 )
states/attack2/node = SubResource( 13 )
states/attack2/position = Vector2( 350, 247 )
states/attack3/node = SubResource( 14 )
states/attack3/position = Vector2( 378, 360 )
states/charge/node = SubResource( 15 )
states/charge/position = Vector2( 577, 360 )
states/die/node = SubResource( 16 )
states/die/position = Vector2( 437, 55 )
states/hurt/node = SubResource( 17 )
states/hurt/position = Vector2( 577, 55 )
states/hurt2/node = SubResource( 18 )
states/hurt2/position = Vector2( 770, 55 )
states/idle/node = SubResource( 19 )
states/idle/position = Vector2( 577, 212 )
states/stamp/node = SubResource( 20 )
states/stamp/position = Vector2( 770, 360 )
states/walk/node = SubResource( 21 )
states/walk/position = Vector2( 770, 212 )
transitions = [ "idle", "walk", SubResource( 22 ), "walk", "idle", SubResource( 23 ), "idle", "attack1", SubResource( 24 ), "idle", "die", SubResource( 25 ), "attack1", "idle", SubResource( 26 ), "idle", "attack2", SubResource( 27 ), "attack2", "idle", SubResource( 28 ), "idle", "attack3", SubResource( 29 ), "attack3", "idle", SubResource( 30 ), "idle", "stamp", SubResource( 31 ), "stamp", "idle", SubResource( 32 ), "idle", "charge", SubResource( 33 ), "idle", "hurt", SubResource( 34 ), "hurt", "idle", SubResource( 35 ), "idle", "hurt2", SubResource( 36 ), "hurt2", "idle", SubResource( 37 ), "charge", "idle", SubResource( 38 ) ]
start_node = "idle"
end_node = "die"
graph_offset = Vector2( 66, 209 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=40]

[sub_resource type="CapsuleShape2D" id=42]
radius = 14.3436
height = 12.0872

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 182.569, 72.338 )

[node name="Minotaur" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 17
script = ExtResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )
START_STATE = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Wander" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Stamp" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 9
vframes = 20
frame = 81

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3.4 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack1 = SubResource( 2 )
anims/attack2 = SubResource( 3 )
anims/attack3 = SubResource( 4 )
anims/charge = SubResource( 5 )
anims/die = SubResource( 6 )
anims/hurt = SubResource( 7 )
anims/hurt2 = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/stamp = SubResource( 10 )
anims/walk = SubResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 39 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 40 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 5

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AxeHitbox" parent="." instance=ExtResource( 11 )]
collision_mask = 4

[node name="Hurtbox" parent="." instance=ExtResource( 9 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -3.92973 )
shape = SubResource( 42 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 0, -44.8985 )
shape = SubResource( 41 )

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="AxeHitbox"]
[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
